<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="go_back">Вернуться назад</string>
    <string name="url_practicum">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_apk_title">Поделиться приложением</string>
    <string name="my_email">ulis89@rambler.ru</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_agreement">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="clean_text_edit">Удалить текст</string>
    <string name="song_name_placeholder">SongName</string>
    <string name="artist_name_placeholder">ArtistName</string>
    <string name="song_time_placeholder">5:55</string>
    <string name="nothing_result_placeholder">Ничего не нашлось</string>
    <string name="some_text_placeholder">какой-то текст</string>
    <string name="something_went_wrong_placeholder">Проблемы со связью.\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="history_header">Вы искали</string>
    <string name="clean_history">Очистить историю</string>
    <string name="album_cover_content_description">AlbumCover</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="add_to_playlist">добавление в плейлист</string>
    <string name="play_track">Включение трека</string>
    <string name="add_to_favorites">Добавить в избранное</string>
</resources>