<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fontFamily="@font/yandex_sans_text_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginHorizontal="4dp"
            android:text="@string/app_name"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:layout_weight="1"
            android:text="@string/search"
            android:fontFamily="@font/yandex_sans_text_medium"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:cornerRadius="16dp"
            app:icon="@drawable/magnifier"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/yandex_sans_text_medium"
            android:text="@string/media"
            android:textColor="@color/black"
            app:cornerRadius="16dp"
            app:icon="@drawable/media_icon"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/yandex_sans_text_medium"
            android:text="@string/settings"
            android:textColor="@color/black"
            app:cornerRadius="16dp"
            app:icon="@drawable/settings_icon"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>




