<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/rootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivAlbumCover"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center_vertical"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="13dp"
        android:src="@drawable/album_image_placeholder_45"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginHorizontal="8dp"
        android:gravity="center_vertical">
        <TextView
            style="@style/SongNameStyle"
            android:id="@+id/tvSongName"
            android:layout_width="match_parent"
            tools:text="@string/song_name_placeholder"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/SongInfoStyle"
                android:id="@+id/tvArtistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constrainedWidth="true"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dotSeparator"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@string/artist_name_placeholder"/>
            <ImageView
                style="@style/SongInfoStyle"
                android:id="@+id/dotSeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tvArtistName"
                app:layout_constraintEnd_toStartOf="@+id/tvSongDuration"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_dot_separator_13"/>
            <TextView
                style="@style/SongInfoStyle"
                android:id="@+id/tvSongDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/dotSeparator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@string/song_time_placeholder"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/arrow_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingTop="18dp"
        android:paddingBottom="19dp"
        android:paddingStart="8dp"
        android:paddingEnd="12dp"
        android:src="@drawable/ic_arrow_forward_simple_24" />
</LinearLayout>