<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        style="@style/SettingsBackIconStyle"
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="@dimen/back_arrow_margin"
        android:layout_marginStart="@dimen/back_arrow_margin"
        android:layout_marginEnd="@dimen/zero"
        android:contentDescription="@string/go_back"
        android:padding="12dp"
        android:src="@drawable/ic_arrow_back_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"/>

    <ImageView
        android:id="@+id/ivAlbumCover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/albumcover_content_description"
        app:layout_constraintTop_toBottomOf="@id/back_arrow"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        android:layout_marginTop="30dp"
        android:src="@drawable/album_placeholder"/>

    <TextView
        android:id="@+id/tvSongName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivAlbumCover"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        tools:text="@string/song_name_placeholder"/>

    <TextView
        android:id="@+id/tvArtistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSongName"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        tools:text="@string/artist_name_placeholder"/>

    <ImageButton
        android:id="@+id/ibAddToPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ibPlay"
        app:layout_constraintBottom_toBottomOf="@id/ibPlay"
        app:layout_constraintEnd_toStartOf="@id/ibPlay"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_add_playlist_button_51"/>
    <ImageButton
        android:id="@+id/ibPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvArtistName"
        app:layout_constraintStart_toEndOf="@id/ibAddToPlaylist"
        app:layout_constraintEnd_toStartOf="@id/ibAddToFavorites"
        android:src="@drawable/ic_play_button_100"
        android:backgroundTint="@color/white"        />
    <ImageButton
        android:id="@+id/ibAddToFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ibPlay"
        app:layout_constraintTop_toTopOf="@id/ibPlay"
        app:layout_constraintBottom_toBottomOf="@id/ibPlay"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        android:src="@drawable/ic_add_favorites_button_51"
        android:backgroundTint="@color/white"/>






</androidx.constraintlayout.widget.ConstraintLayout>